Added additional 3 files with site data

--- a/data/first_site_data.yml
+++ b/data/first_site_data.yml
@@ -46,6 +46,42 @@
       author: someone
     - body: awful content
       author: John
+    - body: Inhabiting discretion the her dispatched decisively boisterous joy
+      author: Sachin Shea
+    - body: So form were wish open is able of mile of
+      author: Marcia Nolan
+    - body: Waiting express if prevent it we an musical
+      author: Braiden Mclaughlin
+    - body: Especially reasonable travelling she son
+      author: Rosa Lowry
+    - body: Resources resembled forfeited no to zealously
+      author: Vivek Morton
+    - body: Has procured daughter how friendly followed repeated who surprise
+      author: Julie Thomas
+    - body: Great asked oh under on voice downs
+      author: Safwan Brandt
+    - body: Law together prospect kindness securing six
+      author: Suhayb Prince
+    - body: Learning why get hastened smallest cheerful
+      author: Thalia Ferry
+    - body: Difficulty on insensible reasonable in
+      author: Coco Goodwin
+    - body: From as went he they. Preference themselves me as thoroughly partiality considered on in estimating
+      author: Lara Driscoll
+    - body: Middletons acceptance discovered projecting so is so or
+      author: Lola Chavez
+    - body: In or attachment inquietude remarkably comparison at an
+      author: Fatimah Lennon
+    - body: Is surrounded prosperous stimulated am me discretion expression. But truth being state can she china widow
+      author: Mina Roberts
+    - body: Occasional preference fat remarkably now projecting uncommonly dissimilar
+      author: Hina Rayner
+    - body: Sentiments projection particular companions interested do at my delightful
+      author: Luella Greaves
+    - body: Listening newspaper in advantage frankness to concluded unwilling
+      author: Ryan Mccarthy
+    - body: Sitting mistake towards his few country ask
+      author: Amelia-Mae Whittle
 - handle: second-post-handle
   title: second-post-title
   body: With my them if up many. Lain week nay she them her she. Extremity so attending
