Refactored logic of source posts synchronization

--- a/test/fixtures/sources.yml
+++ b/test/fixtures/sources.yml
@@ -1,5 +1,5 @@
 # == Schema Information
-# Schema version: 20200328152957
+# Schema version: 20200330193418
 #
 # Table name: sources
 #
@@ -9,6 +9,7 @@
 #  connector  :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  status     :integer          default("0")
 #
 
 # This model initially had no columns defined. If you add columns to the
